data/derived/comb/progs/unify/prog3907.ml.out
Characters 109-123:
  | Times (a,b) -> (eval (a,x,y)) ( *.) (eval (b,x,y))
                                        ^^^^^^^^^^^^^^
Error: This expression has type (float -> float -> float) -> 'a -> 'b
       but an expression was expected of type 'a
       The type variable 'a occurs inside
       (float -> float -> float) -> 'a -> 'b
